Add extension dialog title to accessible node data

Screen readers should read the title ("Add <extension>?") of extension
install dialogs.

Bug: 849910
Change-Id: I9d37b3810c046419f4c5a3b4428a57cb0a5f3289
Reviewed-on: https://chromium-review.googlesource.com/1135595
Commit-Queue: James Wallace-Lee <jamwalla@chromium.org>
Reviewed-by: Devlin <rdevlin.cronin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#578713}
Former-commit-id: 886df0ee866e5ec7cb32c2e1d376b8cafeadb6a5